--- a/public/index.css
+++ b/public/index.css
@@ -1,21 +1,44 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: #24252A;
-    color: #edf0f1;
+
+    color: #000000;
 }
 
+/*----------Header Component----------------*/
 li,
 a,
 button {
     font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    color: #edf0f1;
+    font-weight: 400;
+    font-size: 13px;
+    color: #000000;
     text-decoration: none;
+}
+
+.title {
+    display: flex;
+    align-items: center;
+}
+
+.name {
+    letter-spacing: 0.1em;
+    font-size: 13px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    padding-left: 1rem;
+}
+
+.logo {
+    padding-left: 10px;
+    width: 100px;
+    display: flex;
+    flex-grow: 1;
 }
 
 header {
@@ -33,8 +56,38 @@ header {
     padding: 0px 20px;
 }
 
+/*
 a:hover,
 button:hover {
     color: #ffffff;
     background-color: #333333;
+}
+*/
+
+
+
+/*-----Footer Component---------*/
+footer {
+    background-color: rgb(223, 195, 167);
+}
+
+footer>h1 {
+    color: white;
+    letter-spacing: 0.1em;
+    font-size: 13px;
+    text-align: center;
+    font-family: 'Brandon Black';
+    font-weight: 400;
+    font-style: normal;
+}
+
+footer>p {
+    color: rgba(0, 0, 0, 1);
+    line-height: 1.1;
+    font-size: 45px;
+    text-align: center;
+    font-family: 'Poynter Bold';
+    font-weight: 400;
+    width: auto;
+    padding: auto;
 }
